--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <style type="text/css">
-        body{
+    <style type="text/css">
+         /* body{
             background-color: #e62727;
             color: aqua;
-        }
+        }  */
         h1{
             position: absolute;
             top: 40%;
             width: 100%;
         }
-    </style> -->
+    </style>
 </head>
 <body>
     <h1>Hello je fais du GIT</h1>
