--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style type="text/css">
-         /* body{
+         body{
             background-color: #e62727;
             color: aqua;
-        }  */
+        } 
         h1{
             position: absolute;
             top: 40%;
